@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Fixed: NPO video would now show in some occasions.
+* Fixed: Date parsing in NPO Start (Fixes #1152)
 
 [I]Previous Changes[/I]
+* Fixed: NPO video would now show in some occasions.
 * Fixed: For some NPO live streams the audio stops after some time (Fixes #1134)
 * Fixed: timestamp issue with cookies in NPO Channel (Fixes #1136)
 * Fixed: some dates in the previous years did not show correct (Fixes #1129)
